# policy-required-labels

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml
.github/workflows/: release.yml
src/: lib.rs  settings.rs
test_data/: pod_creation.json  pod_creation_invalid_label_owner.json  pod_creation_missing_label_cost_center.json  pod_creation_missing_label_owner.json  settings.json
