[package]
name = "required-labels"
version = "0.1.0"
authors = ["tmuntaner@suse.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.11.0", features = ["v1_20"] }
kubewarden-policy-sdk = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wapc-guest = "0.4.0"
